# omnivoice-api-server

./: .gitignore  OmniVoice-api-server-Kaggle.ipynb  OmniVoice-api-server.ipynb  README.md  launcher.bat  pyproject.toml  requirements.txt
docker/: Dockerfile
xtts_api_server/: __main__.py  modeldownloader.py  server.py  tts_funcs.py
